V 3.0.0:
  - Redid the layer structure to be contained in a single, more concise class
V 2.1.0:
  - Renamed repository to xdcc-dl
  - Moved project metadata to root __init__.py file
  - Removed sentry/raven integration
  - Removed intel_haruhichan parser
V 2.0.0:
  - Fixed nibl.co.uk parser
  - Breaking change: metadata module now completely redone
V 1.1.0-1.1.3:
  - Fixed release script typo
  - Fixed release uploading
  - Fixed build process
  - Made message argument positional
V 1.0.1:
  - Added typing module to dependencies
V 1.0.0:
  - Implemented a TUI to offer a terminal-based alternative to the GUI
  - Fixed an issue with channels not being found using whois queries with specific bots
  - Added automatic logging of bots that don't provide complete whois information
  - Made sure that connections are closed if the program exits
V 0.5.0:
  - Implemented a GUI for searching and downloading XDCC Packs
V 0.4.0:
  - Extensive independent unit testing
  - Added test coverage report
  - Directly implemented random username generation in the User class
  - Implemented pack skipping
  - Implemented Horriblesubs Pack Searcher using cfscrape
V 0.3.0:
  - Enhanced the Progress structure with callbacks and calculations
  - Fixed order issues
  - Fixed script files not running correctly due to missing shebang
  - Created Windows builds
V 0.2.0:
  - More robust handling of unforeseen events
  - Unit Testing
  - XDCC Pack searchers
  - Server-independent consecutive downloading
V 0.1.0:
  - Simple Command Line script that downloads XDCC Packs based on XDCC messages
  - Defined XDCC Downloader layer structure