@@ -97,8 +97,4 @@ download_packs(combined)
 * [Gitlab](https://gitlab.namibsun.net/namboy94/xdcc-dl)
 * [Github](https://github.com/namboy94/xdcc-dl)
 * [Python Package Index Site](https://pypi.python.org/pypi/xdcc_dl)
-* [Documentation(HTML)](https://docs.namibsun.net/html_docs/xdcc_downloader/index.html)
-* [Documentation(PDF)](https://docs.namibsun.net/pdf_docs/xdcc_downloader.pdf)
-* [Git Statistics (gitstats)](https://gitstats.namibsun.net/gitstats/xdcc_downloader/index.html)
-* [Git Statistics (git_stats)](https://gitstats.namibsun.net/git_stats/xdcc_downloader/index.html)
-* [Test Coverage](https://coverage.namibsun.net/xdcc-dl/index.html)
+* [Progstats](https://progstats.namibsun.net/projects/xdcc-dl)
